@@ -1,4 +1,4 @@
-.TH HDPARM 8 "January 2009" "Version 9.7"
+.TH HDPARM 8 "January 2009" "Version 9.8"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
